[tool.poetry]
name = "shapFlex"
version = "0.1.0"
description = "A python version of R package for computing asymmetric Shapley values to assess causality in any trained machine learning model"
authors = ["gregory-ch <46967700+gregory-ch@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
